# duckdb-multi-mode

./: .gitignore
extension/: extension_config.cmake
extension/onnx/: CMakeLists.txt
extension/onnx/include/: onnx_extension.hpp
extension/onnx/src/: CMakeLists.txt  onnx_extension.cpp
extension/onnx/test/: CMakeLists.txt  mnist_inference.cpp
